# dc-viewer

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
CMake/: FindCg.cmake  FindFreeImage.cmake  FindFreetype.cmake  FindOGRE.cmake  FindOIS.cmake  FindZLIB.cmake  FindZZip.cmake
data/: ic_launcher.material  login.overlay
dc/: CMakeLists.txt
dc/include/: dc_Android.hpp  dc_application.hpp
dc/src/: dc_application.cpp  main.cpp
dc/src/Android/JNI/: DcActivityJNI.cpp  DcActivityJNI.java  MainActivity.java
dc/src/Win32/: dcviewer.rc  resource.h
doc/: build-ubuntu.md  build-windows.md
src/: CMakeLists.txt  dc_application.cpp  dc_application.hpp  dcviewer.rc  main.cpp
